--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
         <h1 id="experience">Experience</h1>
 
         <div class="fexible-container">
-            <div class="experience-item">
-                <h1>Java Programmer</h1>
+            <div id="java-programmer" class="experience-item">
+                <h2>Java Programmer</h2>
                 <h3 class="Name">2022-Present | Mid-Level Developer</h3>
                 <p>Java Developers are responsible for implementing application phases and code in a Java program. They
                     do this by conducting analysis and developing tests of their work. They may also improve established
                     processes and other perfect existing programs.</p>
             </div>
-            <div class="experience-item">
-                <h1>Android Developer</h1>
+            <div id="android-developer" class="experience-item">
+                <h2>Android Developer</h2>
                 <h3 class="Name">2015-2022 | Pro-Level Developer</h3>
                 <p>Designing and developing advanced applications for the Android platform. Unit-testing code for
                     robustness, including edge cases, usability, and general reliability. Bug fixing and improving
@@ -71,6 +71,9 @@
             </div>
         </div>
     </section>
+    <footer>
+        <p>© Copyright Nazmul Islam Antu 2021, a Programmer Portfolio</p>
+    </footer>
 </body>
 
 </html>
